[package]
name = "nuber"
version = "1.1.0"
authors = ["Moshe Sherman <moshesher1998@gmail.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "nuber"
crate-type = ["cdylib"]

[dependencies]
epub = "1.2.2"
html2text = { path = "rust-html2text/" }
enumset = "1.0.7"
image = "0.23.14"
libc = "0.2.101"
tempfile = "3.2.0"
tokenizers = "0.13.2"
deunicode = "1.3.3"

[dependencies.pyo3]
version = "0.14.3"
features = ["extension-module"]

[package.metadata.maturin]
name = "nuber.rust_module.nuber"
