[tool.poetry]
name = "nuber"
version = "0.1.0"
description = ""
authors = ["Moshe Sherman <moshesher1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ueberzug = "^18.1.9"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
app = "nuber:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
