[project]
name = "nuber"
dependencies = ["ueberzug>=18.1.9", "appdirs>=1.4.4", "click>=8.0.1"]

[tool.poetry]
name = "nuber"
version = "0.1.0"
description = "epub terminal reader with inline images"
authors = ["Moshe Sherman <mtshrmn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ueberzug = "^18.1.9"
appdirs = "^1.4.4"
click = "^8.0.1"
toml = "^0.10.2"

[tool.poetry.scripts]
nuber = "nuber:main"

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.maturin]
compatibility = "Linux"

[project.scripts]
nuber = "nuber:main"
